--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,15 +19,11 @@ jobs:
 
       - name: Install dependencies
         run: |
+          run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      # NEW: persist PYTHONPATH for the rest of the job
-      - name: Set PYTHONPATH to repo root
-        run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
+          pip install -e .[dev]  
 
       - name: Run tests
-        run: |
-          export PYTHONPATH=$GITHUB_WORKSPACE
-          pytest tests --maxfail=1 --disable-warnings -q
+        run: pytest tests --maxfail=1 --disable-warnings -q
+
 
